k8s/api-gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: delivery/api-gateway
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          ports:
            - containerPort: 4000
              name: http
            - containerPort: 4099
              name: liveness
          startupProbe:
            httpGet:
              path: /
              port: 4099
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 240
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 45
            periodSeconds: 10
            failureThreshold: 120
          livenessProbe:
            httpGet:
              path: /
              port: 4099
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-srv
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      protocol: TCP
      port: 4000
      targetPort: 4000
