k8s/notification-db-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-db-depl
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: notification-db
  template:
    metadata:
      labels:
        app: notification-db
    spec:
      containers:
        - name: notification-db
          image: postgres:16
          ports:
            - containerPort: 5432
          startupProbe:
            exec:
              command: ['pg_isready', '-U', 'postgres', '-d', 'delivery_notification_db']
            initialDelaySeconds: 3
            periodSeconds: 4
            timeoutSeconds: 5
            failureThreshold: 30
          readinessProbe:
            exec:
              command: ['pg_isready', '-U', 'postgres', '-d', 'delivery_notification_db']
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 10
          livenessProbe:
            exec:
              command: ['pg_isready', '-U', 'postgres', '-d', 'delivery_notification_db']
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: notification-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: notification-db-srv
spec:
  selector:
    app: notification-db
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
