k8s/opensearch-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      containers:
        - name: opensearch
          image: opensearchproject/opensearch:2.18.0
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1.5Gi"
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9600
              name: performance
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch-srv
spec:
  selector:
    app: opensearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
