k8s/search-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
        - name: search
          image: delivery/search
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 4007
              name: http
            - containerPort: 9103
              name: metrics
          startupProbe:
            httpGet:
              path: /health/live
              port: 4007
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 20
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 4007
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: 4007
            initialDelaySeconds: 5
            periodSeconds: 15
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: search-srv
spec:
  selector:
    app: search
  ports:
    - name: http
      port: 4007
      targetPort: 4007
    - name: metrics
      port: 9103
      targetPort: 9103
