k8s/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: delivery/user 
          ports:
            - containerPort: 4001 
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: user-srv
spec:
  selector:
    app: user
  ports:
    - name: http
      protocol: TCP
      port: 4001
      targetPort: 4001
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
